[project]
name = "gens"
version = "0.0.1"
description = "GenS baseline made pip-installable with both CLI and direct Python API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "GenS authors"}]
dependencies = [
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "transformers>=4.45.0",
  "accelerate>=0.34.1",
  "sentencepiece>=0.2.0",
  "Pillow",
  "requests",
]

[project.scripts]
gens = "gens.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# We now ONLY package 'gens', which contains 'inference.py' inside it.

[tool.setuptools]
packages = ["gens", "yivl", "deepseekv1moe"]